updated the colors of the horizontal rules, fixed the y-axis alignment on the stay section

--- a/style.css
+++ b/style.css
@@ -218,12 +218,13 @@ section.stay {
 .stay .center h1 {
   font-size: 24px;
   color: var(--default-black-color);
-  line-height: 4rem;
+  /* line-height: 4rem; */
 }
 
 .stay .center p {
   color: var(--color-gray-400);
-  line-height: 3.5rem;
+  /* line-height: 3.5rem; */
+  margin-bottom: 24px;
 }
 
 .stay .center .e-mail {
@@ -252,6 +253,13 @@ section.stay {
   height: 36px;
   padding: 8px 10px;
   border-radius: 30px;
+}
+
+hr {
+    color: var(--color-gray-300);
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
 }
 
 .b-hr {
